@@ -89,13 +89,15 @@
 		"162784": {
 			"description": "Arachnotron plasma shot.",
 			"name": "BspiAttack",
-			"type": 0
+			"type": 0,
+			"spawns": 36
 		},
 		"162832": {
 			"description": "Imp fireball shot or scratch if at close range.",
 			"name": "TroopAttack",
 			"type": 0,
-			"sound": "sound:55"
+			"sound": "sound:55",
+			"spawns": 31
 		},
 		"162944": {
 			"description": "Demon bite attack.",
@@ -105,23 +107,27 @@
 		"163024": {
 			"description": "Cacodemon fireball shot or bite at close range.",
 			"name": "HeadAttack",
-			"type": 0
+			"type": 0,
+			"spawns": 32
 		},
 		"163120": {
 			"description": "Cyberdemon attack (launch a single rocket).",
 			"name": "CyberAttack",
-			"type": 0
+			"type": 0,
+			"spawns": 33
 		},
 		"163168": {
 			"description": "Baron of Hell or Hell Knight fireball shot or scratch if at close range.",
 			"name": "BruisAttack",
 			"type": 0,
-			"sound": "sound:55"
+			"sound": "sound:55",
+			"spawns": 16
 		},
 		"163264": {
 			"description": "Launch a Revenant missile. Chance of launching a homing missile.",
 			"name": "SkelMissile",
-			"type": 0
+			"type": 0,
+			"spawns": 6
 		},
 		"163360": {
 			"description": "A Revenant's fireball homing action. Changes the angle to point towards the target and emits a puff of smoke.",
@@ -188,17 +194,20 @@
 		"164960": {
 			"description": "Mancubus shot, 2 fireballs: one straight, one left.",
 			"name": "FatAttack1",
-			"type": 0
+			"type": 0,
+			"spawns": 9
 		},
 		"165088": {
 			"description": "Mancubus shot, 2 fireballs: one straight, one right.",
 			"name": "FatAttack2",
-			"type": 0
+			"type": 0,
+			"spawns": 9
 		},
 		"165216": {
 			"description": "Mancubus shot, 2 fireballs: one left, one right.",
 			"name": "FatAttack3",
-			"type": 0
+			"type": 0,
+			"spawns": 9
 		},
 		"165408": {
 			"description": "Lost soul attack.\n\nAn attack sound is REQUIRED.",
